# Snipcast

./: README.md  index.html  package-lock.json  package.json
docs/: research-text-templates-app.md
python_snipcast/: requirements.txt
python_snipcast/snipcast_ctk/: __init__.py  __main__.py  app_darwin_qt.py  data.py  palette.py  paste_target.py
scripts/: prune-desktop-icons.mjs
src/: App.css  App.tsx  Settings.css  SettingsApp.tsx  bracketPlaceholders.ts  branding.ts  fileLinkPlaceholders.ts  hotkeyFormat.ts  main.tsx  theme-overrides.css  types.ts  uiTheme.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: data.rs  lib.rs  macos_window.rs  main.rs  paste_insert.rs  paste_target.rs  paste_target_stub.rs  template_files.rs
src-tauri/src/rich_clipboard/: mod.rs
src-tauri/templates/: default_master.json
