[package]
name = "snipcast"
version = "0.20.0"
description = "Snipcast — текстовые шаблоны из трея"
authors = ["you"]
edition = "2021"

[lib]
name = "snipcast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
arboard = "3.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25", features = ["elcapitan"] }
libc = "0.2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSColor",
  "NSRunningApplication",
  "NSView",
  "NSWindow",
  "libc",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
  "objc2",
  "CFCGTypes",
] }
objc2-core-graphics = { version = "0.3", default-features = false, features = [
  "std",
  "objc2",
  "CGPath",
] }
objc2-quartz-core = { version = "0.3", default-features = false, features = [
  "std",
  "alloc",
  "bitflags",
  "CALayer",
  "CAShapeLayer",
  "objc2-core-foundation",
  "objc2-core-graphics",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
